=======
CHANGES
=======

2.2.3 (unreleased)
------------------

- Nothing changed yet.


2.2.2 (2022-06-28)
------------------

- Allow passing ca_certs option with environment variable.
  [enfold-josh]


2.2.1 (2021-12-08)
------------------

- Fix so if the user is special user from an instance script, it won't fail
  [frapell]

- Update to sentry-sdk 1.5.0
  [frapell]


2.2.0 (2021-09-25)
------------------

- Allow to use the captureMessage function without having a site or request
  [frapell]

- If RELEASE is not set, do not send to Sentry
  [frapell]


2.1.1 (2021-07-16)
------------------

- Typo
  [frapell]


2.1.0 (2021-07-16)
------------------

- Restore support for Plone 4
  [frapell]

- Replace raven with newer sentry-sdk
  [frapell]


2.0.0 (2021-06-24)
------------------

- Add compatibility with Plone 5.2, Python 3.5-3.8

- Prevent error if sentry id is not in request.

- Cut down on excessive logging.
  [enfold-josh]

- Don't send request body to sentry.
  [enfold-josh]


1.6.6 (2016-05-19)
------------------

- Bugfix: Compute new 'content-length'
  [frapell]


1.6.5 (2016-05-18)
------------------

- FD#1435: If Raven is not defined, just ignore reporting to sentry
  [frapell]

- Work if resource is gzip encoded
  [frapell]


1.6.4 (2015-07-07)
------------------

- #474241: Properly register the error_log using GenericSetup so it doesn't
  get overriden when installing other tools
  [frapell]


1.6.3 (2015-04-07)
------------------

- Bugfix: If no additional js are specified to ignore, return proper value
  [frapell]


1.6.2 (2015-02-25)
------------------

- Use full path to .map file so it is always found
  [frapell]


1.6.1 (2015-01-06)
------------------

- Allow to specify a list of Javascript files to not be wrapped by try;catch
  [frapell]


1.6.0 (2014-12-23)
------------------

- Include user information when sending error to Sentry
  [frapell]

- If a `GetSentryDoNotSend` is defined, and set to true, do not send the