@@ -11,6 +11,7 @@ IGNORED_JS = 'GETSENTRY_JS_TO_IGNORE'
 IGNORED_JS_ERRORS = 'GETSENTRY_JS_ERRORS_TO_IGNORE'
 ALLOWED_JS = 'GETSENTRY_JS_TO_ALLOW'
 CA_CERTS_ENV_VAR = 'GETSENTRY_CA_CERTS'
+PROXY_ENV_VAR = 'GETSENTRY_PROXY'
 
 
 IS_PLONE_4 = api.env.plone_version().startswith("4")
